unpackaged/main/default/objects/pse__Forecast_Curve__c/pse__Forecast_Curve__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ForecastCurveHelp</customHelpPage>
    <description>Contains one or more billing forecast curve details to measure varying anticipated revenue over a defined sequence of time (such as a quarter).</description>
    <label>Billing Forecast Curve</label>
    <nameField>
        <label>Billing Forecast Curve Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Forecast Curves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>