unpackaged/main/default/objects/pse__Forecast_Curve__c/fields/pse__Lag__c.field-meta.xml
<CustomField>
    <fullName>pse__Lag__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The lag, in days, to apply before starting billing forecast curve calculations. The default value is 0.</description>
    <inlineHelpText>The lag, in days, to apply before starting billing forecast curve calculations. The default value is 0.</inlineHelpText>
    <label>Lag</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>