unpackaged/main/default/objects/pse__Forecast_Curve__c/fields/pse__Max_Forecast_Period__c.field-meta.xml
<CustomField>
    <fullName>pse__Max_Forecast_Period__c</fullName>
    <formula>NULLVALUE(pse__Lag__c,0) + NULLVALUE(pse__Total_Curve_Period__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Billing Forecast Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>