unpackaged/main/default/objects/pse__Forecast_Curve__c/fields/pse__Total_Curve_Period__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Curve_Period__c</fullName>
    <label>Total Curve Period</label>
    <summarizedField>pse__Forecast_Curve_Detail__c.pse__Period__c</summarizedField>
    <summaryForeignKey>pse__Forecast_Curve_Detail__c.pse__Forecast_Curve__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>